--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
 
     <footer>
         <div>
-            &copy;SoftUni Team 2022. All rights reserved.
+            &copy;Plamen Raev 2024. All rights reserved.
         </div>
     </footer>
 
