--- a/staticfiles/css/create.css
+++ b/staticfiles/css/create.css
@@ -68,7 +68,7 @@ textarea {
     color: white;
 }
 
-.add-album, .edit-album, .delete-album, .delete-profile {
+.add-album, .edit-album, .delete-album, .delete-profile, .edit-profile {
     width: 150px;
     height: 50px;
     cursor: pointer;
